--- a/css/index.css
+++ b/css/index.css
@@ -105,6 +105,7 @@ label {
 }
 
 button {
+  text-align: center;
   padding: 0.5em 2em;
   border: 0;
   border-bottom: 3px solid;
@@ -115,10 +116,10 @@ button {
   color: #fff;
   background-color: #0c8cd3;
   border-color: #04324c;
-  width: 20%;
+  min-width: 20%;
   display: block;
   clear: both;
-  margin: 10px 0px;
+  margin: 5px 0px;
 }
 
 button:active {
